-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 3.0.0-rc1
-
Ubuntu 12.04, 32bit
-
9c09d235bdb8e3802321b95f49f74a9d0f5993e9 9003105f6cc2027e3fe945b786cbadd010daffa0
Steps to reproduce:
- go to Tools -> Options -> Build & Run -> Debugger
- select one of the debugger but without modifying anything hit 'Apply'
- the selected Debugger will become bold printed and the ABI gets the same ABI added
For Gerrit Dashboard: QTCREATORBUG-10642 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
71040,2 | Debugger: Trim ABI list for GDB based debuggers | 3.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |