Debugger: Do not mark unchanged items as changed in options page

Task-number: QTCREATORBUG-10642

Change-Id: Iff195abb90283ee731fe33acb75bcacd6d158e04
Reviewed-by: Christian Stenger <christian.stenger@digia.com>